2007-07-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* COPYING, lib/COPYING: Update to GPLv3.  All uses changed.
	* NEWS: Update.

2007-06-30  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/gnupload: Fix shell portability issues with for loops.
	Report by Karl Berry.

2007-06-23  Paul Eggert  <eggert@cs.ucla.edu>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* aclocal.in (write_aclocal): Warn about autoconf
	incompatibilities instead of making them fatal.
	* tests/missing4.test: Adjust.
	* NEWS: Update.
	Problem reported by Bruno Haible in
	<http://lists.gnu.org/archive/html/bug-automake/2007-06/msg00010.html>.

2007-05-03  Stepan Kasal  <kasal@ucw.cz>

	* doc/automake.texi, lib/Automake/Rule.pm: Fix typos.
	* automake.in: Likewise.
	(am_primary_prefixes): Keep the intentional typo there.

2007-04-25  Eric Blake  <ebb9@byu.net>

	* doc/stamp-vti: Remove generated file from revision control.
	* doc/version.texi: Likewise.

2007-04-23  Reuben Thomas  <rrt@sc3d.org>  (tiny change)

	* doc/automake.texi (Python): Fix typo.

2007-03-30  Eric Blake  <ebb9@byu.net>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/mdate-sh (ls_command): Use -n when available to avoid
	problems with spaces in user/group names.
	* tests/mdate5.test: New test.
	* tests/Makefile.am: Adjust.

2007-03-30  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* automake.in (handle_tests): Rewrite XFAIL_TESTS just like
	TESTS, appending $(EXEEXT), so that matching continues to work
	on w32.
	* NEWS: Mention this.
	* doc/automake.texi (EXEEXT, Extending): Update.
	* tests/check7.test: New test.
	* tests/Makefile.am: Adjust.
	Bug report by Ed Hartnett.

2007-03-30  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* m4/depout.m4 (_AM_OUTPUT_DEPENDENCY_COMMANDS): Again search
	the whole file, but use sed to reduce the line length.
	Fixes 1.10 regression.  Report by David Byron.
	* THANKS, NEWS: Update.

2007-03-29  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
