@@ -1,5 +1,9 @@
 2007-07-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* aclocal.in (version): Fix output to match GCS requirements.
+	* automake.in (version): Likewise.
+	Report by Eric Blake.
+
 	* COPYING, lib/COPYING: Update to GPLv3.  All uses changed.
 	* NEWS: Update.
 
